// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HSPDetailPanel should change to wrapped and render when wrapped view is clicked 1`] = `
<aside
  class="sliding-panel sliding-panel--bottom sliding-panel--bottom--medium hsp-detail-panel"
  data-testid="sliding-panel"
>
  <div
    class="sliding-panel__header"
  >
    <span
      class="small sliding-panel__header__title"
    >
      U6MKN0 · rec full Name · scientific name
    </span>
    <button
      class="button tertiary sliding-panel__header__buttons"
      title="Close panel"
      type="button"
    >
      <test-file-stub />
    </button>
  </div>
  <div
    class="sliding-panel__content"
  >
    <div
      class="hsp-detail-panel__body"
    >
      <div
        class="button-group"
      >
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Highlight properties
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Select annotation
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <fieldset
          class="msa-view-choice"
        >
          View:
          <label>
            <input
              checked=""
              name="view"
              type="radio"
            />
            Overview
          </label>
          <label>
            <input
              name="view"
              type="radio"
            />
            Wrapped
          </label>
        </fieldset>
      </div>
      <div>
        <div
          class="alignment-grid alignment-wrapped"
          data-testid="alignment-wrapped-view"
        >
          <div
            class="track-label track-label--align-labels"
          >
            <span
              class="align-label"
            >
              Query
            </span>
            <button
              class="align-label"
              style="height: 20px;"
              tabindex="-1"
              type="button"
            >
              Match:
              <a
                href="/uniprotkb/U6MKN0"
              >
                U6MKN0
              </a>
            </button>
          </div>
          <div
            class="track"
          >
            <nightingale-msa
              calculate-conservation="true"
              color-scheme="conservation"
              height="40"
              length="45"
              overlay-conservation="true"
            />
          </div>
          <span
            class="right-coord"
          >
            <div
              style="height: 20px;"
            >
              30
            </div>
            <div
              style="height: 20px;"
            >
              445
            </div>
          </span>
          <span
            class="track-label annotation-label"
          >
            U6MKN0:Chain
          </span>
          <div
            class="track annotation-track"
          >
            <protvista-track
              displayend="45"
              displaystart="1"
              layout="non-overlapping"
              length="45"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</aside>
`;

exports[`HSPDetailPanel should initially render overview 1`] = `
<aside
  class="sliding-panel sliding-panel--bottom sliding-panel--bottom--medium hsp-detail-panel"
  data-testid="sliding-panel"
>
  <div
    class="sliding-panel__header"
  >
    <span
      class="small sliding-panel__header__title"
    >
      U6MKN0 · rec full Name · scientific name
    </span>
    <button
      class="button tertiary sliding-panel__header__buttons"
      title="Close panel"
      type="button"
    >
      <test-file-stub />
    </button>
  </div>
  <div
    class="sliding-panel__content"
  >
    <div
      class="hsp-detail-panel__body"
    >
      <div
        class="button-group"
      >
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Highlight properties
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Select annotation
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <fieldset
          class="msa-view-choice"
        >
          View:
          <label>
            <input
              checked=""
              name="view"
              type="radio"
            />
            Continuous
          </label>
          <label>
            <input
              name="view"
              type="radio"
            />
            Wrapped
          </label>
        </fieldset>
      </div>
      <div>
        <section
          class="alignment-grid"
          data-testid="alignment-view"
        >
          <span
            class="track-label"
          >
            Overview
          </span>
          <div
            class="track"
          >
            <div>
              <nightingale-track
                display-end="-1"
                display-start="1"
                height="15"
                highlight="418:421"
                highlight-color="#FFEB3B66"
                length="486"
                min-height="10"
                min-width="10"
                style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
              >
                <!---->
                <svg
                  class="container"
                  height="15"
                  width="10"
                >
                  <g
                    class="sequence-features"
                  >
                    <g
                      class="feature-group"
                      id="g_1"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="line feature"
                            d="M0,6.5 L0,6.5"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      class="feature-group"
                      id="g_2"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="rectangle feature"
                            d="M0,0L0,0L0,13L0,13Z"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      class="feature-group"
                      id="g_3"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="line feature"
                            d="M0,6.5 L0,6.5"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                  <g
                    class="highlighted"
                  />
                  <g
                    class="margin"
                  />
                </svg>
              </nightingale-track>
              <nightingale-track
                display-end="-1"
                display-start="1"
                height="15"
                highlight="418:421"
                highlight-color="#FFEB3B66"
                length="486"
                min-height="10"
                min-width="10"
                style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
              >
                <!---->
                <svg
                  class="container"
                  height="15"
                  width="10"
                >
                  <g
                    class="sequence-features"
                  >
                    <g
                      class="feature-group"
                      id="g_4"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="line feature"
                            d="M0,6.5 L0,6.5"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      class="feature-group"
                      id="g_5"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="rectangle feature"
                            d="M0,0L0,0L0,13L0,13Z"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      class="feature-group"
                      id="g_6"
                    >
                      <g
                        class="location-group"
                      >
                        <g
                          class="fragment-group"
                        >
                          <path
                            class="line feature"
                            d="M0,6.5 L0,6.5"
                            stroke="#014371"
                            style="fill: #014371; fill-opacity: 0.9; stroke-opacity: 0.9;"
                            transform="translate(10,1)"
                          />
                          <rect
                            class="outer-rectangle feature"
                            height="13"
                            stroke="transparent"
                            style="fill: transparent;"
                            transform="translate(10,1)"
                            width="0"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                  <g
                    class="highlighted"
                  />
                  <g
                    class="margin"
                  />
                </svg>
              </nightingale-track>
            </div>
          </div>
          <span
            class="track-label"
            data-testid="track-label"
          >
            U6MKN0:Chain
          </span>
          <div
            class="track"
          >
            <nightingale-track
              display-end="486"
              display-start="1"
              height="15"
              highlight="418:421"
              highlight-color="#FFEB3B66"
              length="486"
              min-height="10"
              min-width="10"
              style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
            >
              <!---->
              <svg
                class="container"
                height="15"
                width="10"
              >
                <g
                  class="sequence-features"
                >
                  <g
                    class="feature-group"
                    id="g_0"
                  >
                    <g
                      class="location-group"
                    >
                      <g
                        class="fragment-group"
                      >
                        <path
                          class="rectangle feature"
                          d="M0,0L0,0L0,13L0,13Z"
                          stroke="#CC9933"
                          style="fill: #CC9933; fill-opacity: 0.9; stroke-opacity: 0.9;"
                          transform="translate(10,1)"
                        />
                        <rect
                          class="outer-rectangle feature"
                          height="13"
                          stroke="transparent"
                          style="fill: transparent;"
                          transform="translate(10,1)"
                          width="0"
                        />
                      </g>
                    </g>
                  </g>
                </g>
                <g
                  class="highlighted"
                />
                <g
                  class="margin"
                />
              </svg>
            </nightingale-track>
          </div>
          <div
            class="track-label track-label--align-labels"
          >
            <span
              class="align-label"
            >
              Query
            </span>
            <button
              class="align-label"
              style="height: 20px;"
              tabindex="-1"
              type="button"
            >
              Match:
              <a
                href="/uniprotkb/U6MKN0"
              >
                U6MKN0
              </a>
            </button>
          </div>
          <div
            class="track"
          >
            <nightingale-manager
              reflected-attributes="highlight,display-start,display-end"
              style="display: block; line-height: 0;"
            >
              <nightingale-navigation
                height="40"
                length="28"
              />
              <!---->
            </nightingale-manager>
          </div>
          <div
            class="right-coord"
          >
            <div
              style="height: 20px;"
            >
              3
            </div>
            <div
              style="height: 20px;"
            >
              3
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</aside>
`;
